# agentd

./: .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SCOPE-M1.md  chat.sh  flake.nix  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-evals.yml  release.yml
agents/: coder.md
crates/agent/: Cargo.toml
crates/agent-core/: ARCHITECTURE.md  Cargo.toml
crates/agent-core/src/: anthropic.rs  approval.rs  chat_history.rs  cost.rs  embedding.rs  gc.rs  guidance.rs  hydration.rs  interpreter.rs  ir.rs  ir_agent.rs  ir_interpreter.rs  ir_normalize.rs  lib.rs  memory.rs  models.rs  op.rs  output_contract.rs  prompt_ir.rs  provider.rs  public_trace.rs  temporal.rs  tool.rs  tools.rs  trace.rs
crates/agent-core/testdata/: public_trace_golden.jsonl
crates/agent-core/tests/: gc_behavior_evals.rs  gc_evals.rs  infer_infer_evals.rs  provider_registry.rs  state_keys.rs
crates/agent-oauth/: Cargo.toml
crates/agent-oauth/src/: lib.rs
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/examples/: approval.rs  custom_source.rs  one_shot.rs  output_schema.rs  session.rs  typed_tool.rs
crates/agent-sdk/src/: agent.rs  error.rs  lib.rs  runner.rs  session.rs  testing.rs
crates/agent-sdk/tests/: custom_source_example.rs  sdk.rs  session.rs
crates/agent/src/: frontmatter.rs  main.rs
crates/agent/tests/: delegation_evals.rs  fifo_regular_file.rs  guidance_compose.rs  json_stdout.rs  otel_smoke.rs  runtime_trajectory.rs  session_resilience.rs
crates/agentd/: Cargo.toml
crates/agentd/src/: events.rs  main.rs  send.rs  session.rs  spec.rs  systemd.rs
crates/agentd/tests/: supervisor.rs
docs/: AGENT_IR.md  EMPTY_COMPLETION.md  GC.md  GUIDANCE.md  MEMORY.md  OTEL.md  PROMPT_IR.md  PROVIDERS.md  STATE_KEYS.md  SUPERVISOR.md  TRACE_SCHEMA.md
evals/: agentd-persistent.sh  eval-policy.sh  fifo.sh  hydration.sh  oauth-live-check.sh  online-infer-tool.sh  online-shell.sh  release-models.yaml  release-online.sh  release.sh  replay-divergence.sh  session.sh  smoke.sh  trace-shape.sh
evals/delegation/: README.md
evals/delegation/config/agent/: models.yaml
evals/delegation/recordings/: child-capability.json  count-in-files--baseline.jsonl  count-in-files--subagent-process.jsonl  count-in-files--tool-guided.jsonl  count-in-files--tool-unprompted.jsonl  dead-end-debugging--baseline.jsonl  dead-end-debugging--subagent-process.jsonl  dead-end-debugging--tool-guided.jsonl  dead-end-debugging--tool-unprompted.jsonl  doc-synthesis--baseline.jsonl  doc-synthesis--subagent-process.jsonl  doc-synthesis--tool-guided.jsonl  doc-synthesis--tool-unprompted.jsonl  generation-offload--baseline.jsonl  generation-offload--subagent-process.jsonl  generation-offload--tool-guided.jsonl  generation-offload--tool-unprompted.jsonl  restraint-direct--baseline.jsonl  restraint-direct--subagent-process.jsonl  restraint-direct--tool-guided.jsonl  restraint-direct--tool-unprompted.jsonl
evals/gc/: README.md  gc-coder-tool-chain.jsonl
evals/gc/judge/: behavioral.jsonl  recorded.jsonl
evals/gc/recordings/: clean-long--generational--guided-s1.jsonl  clean-long--mark-sweep--guided-s1.jsonl  clean-long--none--guided-s1.jsonl  clean-long--none--guided-s2.jsonl  clean-long--semantic--guided-s1.jsonl  clean-long--semantic--guided-s2.jsonl  clean-long--stack--guided-s1.jsonl  distractor-update--generational--guided-s1.jsonl  distractor-update--mark-sweep--guided-s1.jsonl  distractor-update--none--guided-s1.jsonl  distractor-update--none--guided-s2.jsonl  distractor-update--semantic--guided-s1.jsonl  distractor-update--semantic--guided-s2.jsonl  distractor-update--stack--guided-s1.jsonl  early-needle--generational--guided-s1.jsonl  early-needle--generational--guided-s2.jsonl  early-needle--mark-sweep--guided-s1.jsonl  early-needle--mark-sweep--guided-s2.jsonl  early-needle--mark-sweep--unguided-s1.jsonl  early-needle--mark-sweep--unguided-s2.jsonl  early-needle--mark-sweep.jsonl  early-needle--none--unguided-s1.jsonl  early-needle--none.jsonl  early-needle--ring--guided-s1.jsonl  early-needle--ring--guided-s2.jsonl  early-needle--ring--unguided-s1.jsonl  early-needle--ring.jsonl  early-needle--semantic--guided-s1.jsonl  early-needle--semantic--guided-s2.jsonl  early-needle--semantic--unguided-s1.jsonl  early-needle--semantic.jsonl  early-needle--stack--guided-s1.jsonl  early-needle--stack--guided-s2.jsonl  early-needle--stack--unguided-s1.jsonl  early-needle--stack--unguided-s2.jsonl  early-needle--stack.jsonl  memory-discipline--mark-sweep--guided-s1.jsonl  memory-discipline--mark-sweep--unguided-s1.jsonl  memory-discipline--mark-sweep.jsonl  memory-discipline--none--unguided-s1.jsonl  (+30 more)
evals/infer-infer/: README.md
examples/: models.yaml
