[workspace]
members = ["crates/agent-core", "crates/agent-oauth", "crates/agent"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
futures = "0.3"
opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.32"
opentelemetry-otlp = "0.32"
opentelemetry_sdk = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
