[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Free-monad agent runtime: Infer/Eval/Emit effects, serializable AgentIR, hydration, replay"
keywords = ["agent", "llm", "free-monad", "runtime", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
anyhow.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
dirs.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["test-util"] }
