[package]
name = "agent-oauth"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
