[package]
name = "agent-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OAuth (PKCE) provider auth for the agent runtime: Claude and Codex subscription tokens"
keywords = ["agent", "llm", "oauth", "pkce", "authentication"]
categories = ["authentication", "api-bindings"]

[dependencies]
agent-core = { path = "../agent-core", version = "0.1.0" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
