[package]
name = "agent-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for agentd: embed the agent loop with typed tools, structured output, streaming public events, and replay"
keywords = ["agent", "llm", "sdk", "runtime", "ai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
agent-core = { path = "../agent-core", version = "0.1.0" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
