[package]
name = "agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["oauth"]
oauth = ["dep:agent-oauth"]

[dependencies]
agent-core = { path = "../agent-core" }
agent-oauth = { path = "../agent-oauth", optional = true }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
uuid.workspace = true
