[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI agent loop: one-shot, stdin, and FIFO sessions over the agent-core runtime"
keywords = ["agent", "llm", "cli", "ai", "unix"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["oauth"]
oauth = ["dep:agent-oauth"]

[dependencies]
agent-core = { path = "../agent-core", version = "0.1.0" }
agent-oauth = { path = "../agent-oauth", version = "0.1.0", optional = true }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
uuid.workspace = true
